# Study_OpenGL

./: CMakeLists.txt  README.md
include/glad/: glad.h
shaders/: rectangle.frag
src/: glad.c  main.cpp  shader.h
src/Model/: Rectangle.cpp  Rectangle.h  Triangle.cpp  Triangle.h
